Fix download button target

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ a.label-info .badge {
          </p>
 
          <p class="text-center">
-            <a class="btn btn-primary" href="https://github.com/bseth99/jqueryui-multisearch/zipball/jqueryui-multisearch-0.0.1" >
+            <a class="btn btn-primary" rel="nofollow" href="https://github.com/bseth99/jquery-ui-multisearch/archive/v0.0.1.zip" >
               Download Latest Version
             </a>
          </p>
