Grammer; Demo and jsFiddle link

--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@ a.label-info .badge {
          <h3>Overview</h3>
 
          <p>
-         The goal of this project is to create a widget that is an unopinionated about the structure and
-         styling of the content as possible.  There are so many variations of building a list of items by
+         The goal of this project is to create a widget that is as unopinionated about the structure and
+         styling of the content as possible.  There are many variations of building a list of items by
          looking each item up using a type ahead field but few will ever look the same.  However, the basic
          underlying functionality is very similar.  This widget emphasizes building features that encapsulate
-         that control logic and providing many hooks along the way to customize the behavior.
+         that control logic and provide many hooks along the way to customize the behavior.
          </p>
 
 
@@ -152,7 +152,7 @@ a.label-info .badge {
          <h3>Quick Start</h3>
 
          <p>
-         MultiSearch has dependencies on jQuery, jQuery UI, and Underscore.  The LoDash compatible version can be used instead.
+         MultiSearch has dependencies on jQuery, jQuery UI, and Underscore (if you prefer LoDash, it can be used instead).
          The widget makes extensive use of several of the data transversal and manipulation function in the Underscore library
          which helps reduce the code size and maintenance (no reason to reinvent that wheel).  You can download these
          or just use the CDN versions:
@@ -263,7 +263,9 @@ $(function() {
 
          <p>
          The example is straight from the basic demo below.  Take a look at it for the full source and
-         to see it working (with and without the styling).
+         to see it working (with and without the styling).  I also setup a
+         <a href="http://jsfiddle.net/bseth99/mWerB/" target="_fiddle">jsFiddle</a> with the basic demo
+         that you can use to tinker with some of the options and styling.
          </p>
 
          <h3>Demos</h3>
@@ -271,9 +273,10 @@ $(function() {
          <ul>
             <li><a href="examples/base.html">The Basics</a></li>
             <li><a href="examples/bootstrap.html">Bootstrap Structure and Styling</a></li>
-            <li><a href="examples/position.html">Alternative Positioning</a></li>
-            <li><a href="examples/api.html">Using the API methods</a></li>
-            <li><a href="examples/movies.html">Backbone Models and More Data</a></li>
+            <li><a href="examples/position.html">Alternative Positioning of the Search Input</a></li>
+            <li><a href="examples/api.html">Using the API Methods to Get/Set Values</a></li>
+            <li><a href="examples/movies.html">Using a Backbone Collection and Model</a></li>
+            <li><a href="examples/contact.html">Entering Recipients from an Address Book</a></li>
          </ul>
 
          <h3>Reference</h3>
